--- a/gdw--gelb.html
+++ b/gdw--gelb.html
@@ -716,7 +716,13 @@
                                                 <strong>*|ANREDEPERS|*!</strong>
                                               </h4>
 
-                                              <p>
+                                              <p style="
+                                              font-family: 'SabonNextLTPro-Regular',
+                                                Georgia, Times, serif !important;
+                                              font-style: normal !important;
+                                              font-weight: normal !important;
+                                              font-size: 18px;
+                                            " mc:edit="bodytextbefore">
                                                 Für viele wird diese Woche
                                                 wieder eine kurze Arbeitswoche
                                                 werden, denn am Donnerstag ist
@@ -739,8 +745,7 @@
                                                   font-style: normal !important;
                                                   font-weight: normal !important;
                                                   font-size: 18px;
-                                                " mc:edit="bodytextafter"></p>
-                                              <p>
+                                                " mc:edit="bodytextafter">
                                                 Bei den freien Tagen gehört
                                                 Österreich also zu den
                                                 &bdquo;Top-6&ldquo; in der EU
