--- a/gdw--orange.html
+++ b/gdw--orange.html
@@ -1155,7 +1155,14 @@
                                                 <strong>*|ANREDEPERS|*!</strong>
                                               </h4>
 
-                                              <p>
+                                              <p  style="
+                                              font-family: 'SabonNextLTPro-Regular',
+                                                Georgia, Times, serif !important;
+                                              font-style: normal !important;
+                                              font-weight: normal !important;
+                                              font-size: 18px;
+                                            "
+                                            mc:edit="bodytextbefore">
                                                 Für viele wird diese Woche
                                                 wieder eine kurze Arbeitswoche
                                                 werden, denn am Donnerstag ist
@@ -1194,8 +1201,7 @@
                                                   font-size: 18px;
                                                 "
                                                 mc:edit="bodytextafter"
-                                              ></p>
-                                              <p>
+                                              >
                                                 Bei den freien Tagen gehört
                                                 Österreich also zu den
                                                 &bdquo;Top-6&ldquo; in der EU
