--- a/veranstalltung_einladung--new.html
+++ b/veranstalltung_einladung--new.html
@@ -136,7 +136,7 @@
 	@style ueberschrift 1
 	*/
 		h1{
-			/*@editable*/color:#caa87d !important;
+			/*@editable*/color:#e84e0f !important;
 			/*@editable*/font-family:'museo-sans-bold', Arial Black, Helvetica, sans-serif !important;
 			/*@editable*/font-size:55px;
 			/*@editable*/font-style:normal;
@@ -288,7 +288,7 @@
 	@tip Set the styling for your email's footer links. Choose a color that helps them stand out from your text.
 	*/
 		.footerContainer .mcnTextContent a{
-			/*@editable*/color:#caa87d;
+			/*@editable*/color:#e84e0f;
 			/*@editable*/font-weight:700;
 			/*@editable*/text-decoration:none;
 		}
@@ -320,12 +320,7 @@
 			width:100% !important;
 		}
 
-}	@font-face {font-family: 'SabonNextLTPro-Italic';        font-style: italic;        font-weight: normal;        src: local(SabonNextLTPro-Italic),          url(https://agenda-austria.at/Newsletter/SabonNextLTPro-Italic.woff)            format('woff'),          url(https://agenda-austria.at/Newsletter/SabonNextLTPro-Italic.otf)            format('opentype');}
-	@font-face {font-family: 'SabonNextLTPro-Regular';        font-style: normal;        font-weight: normal;        src: local(SabonNextLTPro-Regular),          url(https://agenda-austria.at/Newsletter/SabonNextLTPro-Regular.woff)            format('woff'),          url(https://agenda-austria.at/Newsletter/SabonNextLTPro-Regular.otf)            format('opentype');}
-	@font-face {font-family: 'SabonNextLTPro-Bold';        font-style: normal;        font-weight: bold;        src: local(SabonNextLTPro-Bold),          url(https://agenda-austria.at/Newsletter/SabonNextLTPro-Bold.woff)            format('woff'),          url(https://agenda-austria.at/Newsletter/SabonNextLTPro-Bold.otf)            format('opentype');}
-	@font-face {font-family: 'museo-sans-bold';        font-style: normal;        font-weight: 900;        src: url(https://agenda-austria.at/Newsletter/MuseoSans_900.woff)            format('woff'),          url(https://agenda-austria.at/Newsletter/MuseoSans_900.otf)            format('opentype');}
-	@font-face {font-family: 'museo-sans';        font-style: normal;        font-weight: 700;        src: url(https://agenda-austria.at/Newsletter/MuseoSans_700.woff)            format('woff'),          url(https://agenda-austria.at/Newsletter/MuseoSans_700.otf)            format('opentype');}
-	@media only screen and (max-width: 480px){
+}	@media only screen and (max-width: 480px){
 		.mcnCartContainer,.mcnCaptionTopContent,.mcnRecContentContainer,.mcnCaptionBottomContent,.mcnTextContentContainer,.mcnBoxedTextContentContainer,.mcnImageGroupContentContainer,.mcnCaptionLeftTextContentContainer,.mcnCaptionRightTextContentContainer,.mcnCaptionLeftImageContentContainer,.mcnCaptionRightImageContentContainer,.mcnImageCardLeftTextContentContainer,.mcnImageCardRightTextContentContainer,.mcnImageCardLeftImageContentContainer,.mcnImageCardRightImageContentContainer{
 			max-width:100% !important;
 			width:100% !important;
@@ -356,7 +351,12 @@
 			padding-bottom:9px !important;
 		}
 
-}	@media only screen and (max-width: 480px){
+}	@font-face {font-family: 'SabonNextLTPro-Italic';        font-style: italic;        font-weight: normal;        src: local(SabonNextLTPro-Italic),          url(https://agenda-austria.at/Newsletter/SabonNextLTPro-Italic.woff)            format('woff'),          url(https://agenda-austria.at/Newsletter/SabonNextLTPro-Italic.otf)            format('opentype');}
+	@font-face {font-family: 'SabonNextLTPro-Regular';        font-style: normal;        font-weight: normal;        src: local(SabonNextLTPro-Regular),          url(https://agenda-austria.at/Newsletter/SabonNextLTPro-Regular.woff)            format('woff'),          url(https://agenda-austria.at/Newsletter/SabonNextLTPro-Regular.otf)            format('opentype');}
+	@font-face {font-family: 'SabonNextLTPro-Bold';        font-style: normal;        font-weight: bold;        src: local(SabonNextLTPro-Bold),          url(https://agenda-austria.at/Newsletter/SabonNextLTPro-Bold.woff)            format('woff'),          url(https://agenda-austria.at/Newsletter/SabonNextLTPro-Bold.otf)            format('opentype');}
+	@font-face {font-family: 'museo-sans-bold';        font-style: normal;        font-weight: 900;        src: url(https://agenda-austria.at/Newsletter/MuseoSans_900.woff)            format('woff'),          url(https://agenda-austria.at/Newsletter/MuseoSans_900.otf)            format('opentype');}
+	@font-face {font-family: 'museo-sans';        font-style: normal;        font-weight: 700;        src: url(https://agenda-austria.at/Newsletter/MuseoSans_700.woff)            format('woff'),          url(https://agenda-austria.at/Newsletter/MuseoSans_700.otf)            format('opentype');}
+	@media only screen and (max-width: 480px){
 		.mcnImageGroupBlockInner{
 			padding-top:0 !important;
 			padding-bottom:0 !important;
@@ -515,7 +515,7 @@
 			margin-top:0;
 		}
 		.big-title{
-			color:#caa87d !important;
+			color:#e84e0f !important;
 			font-family:'museo-sans-bold', Arial Black, Helvetica, sans-serif !important;
 			font-style:normal !important;
 			font-weight:900 !important;
@@ -592,7 +592,7 @@
                                                           max-width: 600px !important;
                                                           width: 100% !important;
                                                         " class="div">
-                                                        <img src="https://mcusercontent.com/841d829fd2147fc9a9bad49db/images/0f60ee39-7e59-cc37-c296-70590f74bf40.png" alt="" border="0" style="margin: 0; padding: 0;" mc:edit="headerimage">
+                                                        <img src="https://mcusercontent.com/841d829fd2147fc9a9bad49db/images/fbd4abc2-8f06-6ff0-956b-15c5e4933c6a.png" alt="Agenda Austria Logo" border="0" style="height: 68px; width: 600px; margin: 0; padding: 0;" width="600" height="68" mc:edit="headerimage">
                                                         <a class="link" href="*|ARCHIVE|*" style="
                                                             color: #ffffff;
                                                             display: block;
@@ -716,7 +716,7 @@
                                                         line-height: 125%;
                                                       " valign="top">
                                                       <h1 mc:edit="headline" class="big-title null" style="
-                                                          color: #caa87d !important;
+                                                          color: #e84e0f !important;
                                                           font-family: 'museo-sans-bold',
                                                             Arial Black, Helvetica,
                                                             sans-serif !important;
@@ -796,7 +796,7 @@
                                       <!-- cta block -->
                                       <table class="mcnTextBlock" style="
                                           min-width: 100%;
-                                          background-color: #caa87d;
+                                          background-color: #e84e0f;
                                           border: #ffffff;
                                         " width="100%" cellspacing="0" cellpadding="0" border="0">
                                         <tbody class="mcnTextBlockOuter">
@@ -823,7 +823,7 @@
                                                     valign="top"> -->
                                               <!-- 
                                                     <div class="mcnTextContent"
-                                                      style="background-color:#caa87d;border:#FFFFFF;padding:30px;"> -->
+                                                      style="background-color:#e84e0f;border:#FFFFFF;padding:30px;"> -->
                                               <table cellspacing="0" cellpadding="10" border="0" align="center">
                                                 <tbody align="center">
                                                   <tr>
@@ -923,7 +923,7 @@
                                                                           line-height: 100%;
                                                                           text-align: center;
                                                                           text-decoration: none;
-                                                                          color: #caa87d;
+                                                                          color: #e84e0f;
                                                                           font-family: 'museo-sans-bold',
                                                                             Arial Black,
                                                                             Helvetica,
@@ -1304,7 +1304,7 @@
                                                                 padding-top: 0;
                                                                 padding-bottom: 9px;
                                                                 word-break: break-word;
-                                                                color: #caa87d;
+                                                                color: #e84e0f;
                                                                 font-family: 'museo-sans',
                                                                   Arial,
                                                                   Helvetica,
@@ -1318,7 +1318,7 @@
                                                                     Arial,
                                                                     Helvetica,
                                                                     sans-serif !important;
-                                                                  color: #caa87d;
+                                                                  color: #e84e0f;
                                                                   font-size: 16px;
                                                                   font-weight: 700;
                                                                   line-height: 125%;
@@ -1333,7 +1333,7 @@
                                                                     Arial,
                                                                     Helvetica,
                                                                     sans-serif !important;
-                                                                  color: #caa87d;
+                                                                  color: #e84e0f;
                                                                   font-size: 16px;
                                                                   font-weight: 700;
                                                                   line-height: 125%;
@@ -1348,7 +1348,7 @@
                                                                     Arial,
                                                                     Helvetica,
                                                                     sans-serif !important;
-                                                                  color: #caa87d;
+                                                                  color: #e84e0f;
                                                                   font-size: 16px;
                                                                   font-weight: 700;
                                                                   line-height: 125%;
