--- a/gdw--dunkelblau.html
+++ b/gdw--dunkelblau.html
@@ -340,7 +340,12 @@
 			padding-bottom:9px !important;
 		}
 
-}	@media only screen and (max-width: 480px){
+}	@font-face {font-family: 'SabonNextLTPro-Italic';        font-style: italic;        font-weight: normal;        src: local(SabonNextLTPro-Italic),          url(https://agenda-austria.at/Newsletter/SabonNextLTPro-Italic.woff)            format('woff'),          url(https://agenda-austria.at/Newsletter/SabonNextLTPro-Italic.otf)            format('opentype');}
+	@font-face {font-family: 'SabonNextLTPro-Regular';        font-style: normal;        font-weight: normal;        src: local(SabonNextLTPro-Regular),          url(https://agenda-austria.at/Newsletter/SabonNextLTPro-Regular.woff)            format('woff'),          url(https://agenda-austria.at/Newsletter/SabonNextLTPro-Regular.otf)            format('opentype');}
+	@font-face {font-family: 'SabonNextLTPro-Bold';        font-style: normal;        font-weight: bold;        src: local(SabonNextLTPro-Bold),          url(https://agenda-austria.at/Newsletter/SabonNextLTPro-Bold.woff)            format('woff'),          url(https://agenda-austria.at/Newsletter/SabonNextLTPro-Bold.otf)            format('opentype');}
+	@font-face {font-family: 'museo-sans-bold';        font-style: normal;        font-weight: 900;        src: url(https://agenda-austria.at/Newsletter/MuseoSans_900.woff)            format('woff'),          url(https://agenda-austria.at/Newsletter/MuseoSans_900.otf)            format('opentype');}
+	@font-face {font-family: 'museo-sans';        font-style: normal;        font-weight: 700;        src: url(https://agenda-austria.at/Newsletter/MuseoSans_700.woff)            format('woff'),          url(https://agenda-austria.at/Newsletter/MuseoSans_700.otf)            format('opentype');}
+	@media only screen and (max-width: 480px){
 		.mcnImageGroupBlockInner{
 			padding-top:0 !important;
 			padding-bottom:0 !important;
@@ -352,12 +357,7 @@
 			padding-bottom:9px !important;
 		}
 
-}	@font-face {font-family: 'SabonNextLTPro-Italic';        font-style: italic;        font-weight: normal;        src: local(SabonNextLTPro-Italic),          url(https://agenda-austria.at/Newsletter/SabonNextLTPro-Italic.woff)            format('woff'),          url(https://agenda-austria.at/Newsletter/SabonNextLTPro-Italic.otf)            format('opentype');}
-	@font-face {font-family: 'SabonNextLTPro-Regular';        font-style: normal;        font-weight: normal;        src: local(SabonNextLTPro-Regular),          url(https://agenda-austria.at/Newsletter/SabonNextLTPro-Regular.woff)            format('woff'),          url(https://agenda-austria.at/Newsletter/SabonNextLTPro-Regular.otf)            format('opentype');}
-	@font-face {font-family: 'SabonNextLTPro-Bold';        font-style: normal;        font-weight: bold;        src: local(SabonNextLTPro-Bold),          url(https://agenda-austria.at/Newsletter/SabonNextLTPro-Bold.woff)            format('woff'),          url(https://agenda-austria.at/Newsletter/SabonNextLTPro-Bold.otf)            format('opentype');}
-	@font-face {font-family: 'museo-sans-bold';        font-style: normal;        font-weight: 900;        src: url(https://agenda-austria.at/Newsletter/MuseoSans_900.woff)            format('woff'),          url(https://agenda-austria.at/Newsletter/MuseoSans_900.otf)            format('opentype');}
-	@font-face {font-family: 'museo-sans';        font-style: normal;        font-weight: 700;        src: url(https://agenda-austria.at/Newsletter/MuseoSans_700.woff)            format('woff'),          url(https://agenda-austria.at/Newsletter/MuseoSans_700.otf)            format('opentype');}
-	@media only screen and (max-width: 480px){
+}	@media only screen and (max-width: 480px){
 		.mcnTextContent,.mcnBoxedTextContentColumn{
 			padding-right:18px !important;
 			padding-left:18px !important;
@@ -571,7 +571,7 @@
                                                 line-height: 125%;
                                               ">
                                               <div class="div">
-                                                <img src="https://mcusercontent.com/841d829fd2147fc9a9bad49db/images/83621cd9-cc4d-a7b8-f235-cf5b760f91b2.png" alt="" border="0" style="margin: 0; padding: 0;" mc:edit="headerimage">
+                                                <img src="https://mcusercontent.com/841d829fd2147fc9a9bad49db/images/83621cd9-cc4d-a7b8-f235-cf5b760f91b2.png" alt="" border="0" style="height: 68px; width: 600px; margin: 0; padding: 0;" width="600" height="68" mc:edit="headerimage">
                                                 <a class="link" href="#link" style="
                                                     color: #ffffff;
                                                     display: block;
@@ -716,7 +716,14 @@
                                                 <strong>*|ANREDEPERS|*!</strong>
                                               </h4>
 
-                                              <p>
+                                              <p  style="
+                                              font-family: 'SabonNextLTPro-Regular',
+                                                Georgia, Times, serif !important;
+                                              font-style: normal !important;
+                                              font-weight: normal !important;
+                                              font-size: 18px;
+                                            "
+                                            mc:edit="bodytextbefore">
                                                 Für viele wird diese Woche
                                                 wieder eine kurze Arbeitswoche
                                                 werden, denn am Donnerstag ist
@@ -739,8 +746,7 @@
                                                   font-style: normal !important;
                                                   font-weight: normal !important;
                                                   font-size: 18px;
-                                                " mc:edit="bodytextafter"></p>
-                                              <p>
+                                                " mc:edit="bodytextafter">
                                                 Bei den freien Tagen gehört
                                                 Österreich also zu den
                                                 &bdquo;Top-6&ldquo; in der EU
